lb.tf
resource "aws_elb" "main" {
  #depends_on      = [aws_autoscaling_group.autoscaling]
  name            = "${var.app_name}-${var.environment}-lb"
  subnets         = aws_subnet.public.*.id
  #security_groups = [aws_security_group.asg.id]
  availability_zones = [element(data.aws_availability_zones.available.names[*], var.az_count)]
  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }


  health_check {
    healthy_threshold   = "2"
    unhealthy_threshold = "2"
    timeout             = "3"
    target = "HTTP:80/"
    interval            = "10"
  }
  tags = {
    Name = "${var.app_name}-${var.environment}-lb"
  }

}
/*
resource "aws_alb_target_group" "app" {
  name        = "${var.app_name}-${var.environment}-tg"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    healthy_threshold   = "3"
    interval            = "30"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = "/"
    unhealthy_threshold = "2"
  }
}

resource "aws_alb_listener" "front_end" {
  load_balancer_arn = aws_alb.main.id
  port              = var.app_port
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_alb_target_group.app.id
    type             = "forward"
  }
}
*/
